1_developer-experience-tests/envoy-gw/gatewayclass.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gw
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
